--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "twig/twig": "1.15.*@dev",
         "symfony/twig-bridge": "2.5.*@dev",
         "symfony/console": "2.5.*@dev",
-        "symfony/finder": "2.5.*@dev"
+        "symfony/finder": "2.5.*@dev",
+        "nicl/silex-markdown": "1.0.*@dev"
     },
     "require-dev": {
         "symfony/browser-kit": "2.3.*",
